--- a/giga-tester/src/app/header/header.component.html
+++ b/giga-tester/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1>GIGAtester</h1>
+  <h1 routerLink="">GIGAtester</h1><!--add router link here to home page-->
   <nav class="navigation-bar">
     <ul class="navigation-links">
       <li routerLinkActive="active">
@@ -8,20 +8,20 @@
       <li routerLinkActive="active">
         <a routerLink="zbs-entry">ZBS - wejściówki</a>
       </li>
-      <li>
-        <a href="#">RPI</a>
+      <li routerLinkActive="active">
+        <a routerLink="rpi">RPI</a>
       </li>
-      <li>
-        <a href="#">ZFI</a>
+      <li routerLinkActive="active">
+        <a routerLink="zfi">ZFI</a>
       </li>
-      <li>
-        <a href="#">BSK</a>
+      <li routerLinkActive="active">
+        <a routerLink="bsk">BSK</a>
       </li>
-      <li>
-        <a href="#">WZR</a>
+      <li routerLinkActive="active">
+        <a routerLink="wzr">WZR</a>
       </li>
-      <li>
-        <a href="#">JO</a>
+      <li routerLinkActive="active">
+        <a routerLink="jo">JO</a>
       </li>
     </ul>
   </nav>
