--- a/giga-tester/src/app/header/header.component.css
+++ b/giga-tester/src/app/header/header.component.css
@@ -60,3 +60,25 @@ header {
 .active {
   background-color: rgba(255, 255, 255, 0.09);
 }
+
+@media only screen and (max-width: 768px) {
+  header {
+    width: 320%;
+    display: inline-block;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10%;
+    font-size: 64px;
+  }
+
+  header h1 {
+    font-size: 300%;
+  }
+
+  .navigation-links li {
+    display: flex;
+    float: left;
+    padding: 24px 20px;
+    border-radius: 8px;
+  }
+}
