--- a/giga-tester/src/app/header/header.component.html
+++ b/giga-tester/src/app/header/header.component.html
@@ -23,6 +23,9 @@
       <li routerLinkActive="active">
         <a routerLink="jo">JO</a>
       </li>
+      <li routerLinkActive="active">
+        <a routerLink="ed">ED</a>
+      </li>
     </ul>
   </nav>
   <div class="user-login">
