--- a/giga-tester/src/app/jo/jo.component.css
+++ b/giga-tester/src/app/jo/jo.component.css
@@ -1,3 +1,69 @@
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  box-shadow: 0px 0px 2px 2px black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #F5F7FA;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+select:focus {
+  border: 1px rgba(255, 255, 255, 0.05);;
+}
+
+option {
+  background-color: #323232;
+  border: 1px solid black;
+  font-size: 18px;
+}
+
+button {
+  transition: all 0.3s ease 0s;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  box-shadow: 0px 0px 2px 2px black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #F5F7FA;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+button:hover {
+  background-color: rgba(255, 255, 255, 0.12);
+  cursor: pointer;
+}
+
+#selection, #entry {
+  font-size: 16px;
+  width: 40%;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  box-shadow: 0px 0px 2px 2px black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #F5F7FA;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.answer {
+  color: lawngreen;
+  white-space: pre-line;
+}
 
 @media only screen and (max-width: 768px) {
   #info {
