--- a/giga-tester/src/app/home/home.component.html
+++ b/giga-tester/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     <br/><br/>
     Ogólnie ten tester służy bardziej do powtórki/utrwalania wiedzy, jeżeli
     chcecie
-    student debil mode (nic nie umiecie na dany temat) <a href="#">lepiej skorzystać z testera Janka.</a>
+    student debil mode (nic nie umiecie na dany temat) <a href="https://311volt.github.io/pro-trainer/">lepiej skorzystać z testera Janka.</a>
     <br/><br/>
     Jakbyście znaleźli jakieś bugi albo (w szczególności) błędy w odpowiedziach, dajcie znać to poprawie.
   </p>
