--- a/giga-tester/src/app/zbs-entry/zbs-entry.component.css
+++ b/giga-tester/src/app/zbs-entry/zbs-entry.component.css
@@ -65,6 +65,9 @@ input, textarea {
   white-space: pre-line;
 }
 
+img {
+  width: 100%;
+}
 
 @media only screen and (max-width: 768px) {
   #info {
