--- a/giga-tester/src/app/bsk/bsk.component.html
+++ b/giga-tester/src/app/bsk/bsk.component.html
@@ -1,9 +1,6 @@
 <div id="exam">
   <h1>Pytania: </h1>
-  <div class="customQuestionsCheckmark">
-    <input id="customQuestions" type="checkbox"/>
-    <label for="customQuestions">wymyślone pytania</label>
-  </div>
+  <button (click)="onCheckCustomQuestions()">wymyślone pytania: {{includeCustomQuestions == true ? "WŁĄCZONE" : "WYŁĄCZONE"}}</button>
   <h3 [hidden]="!showAnswers">Wynik: {{calculateScore()}}/{{maxPointsMultipleChoiceQuestions}}</h3>
   <ul>
     <li *ngFor="let q of multipleChoiceQuestions; let i = index">
