startet working on kuchta tester

--- a/giga-tester/src/app/header/header.component.html
+++ b/giga-tester/src/app/header/header.component.html
@@ -26,6 +26,9 @@
       <li routerLinkActive="active">
         <a routerLink="ed">ED</a>
       </li>
+      <li routerLinkActive="active">
+        <a routerLink="st">ST</a>
+      </li>
     </ul>
   </nav>
   <div class="user-login">
