--- a/giga-tester/src/app/home/home.component.html
+++ b/giga-tester/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="info-div">
   <h1>GIGAtester na 6 sem</h1>
   <p>
-    Tester do wszystkich przedmiotów z 6 semestru aplikacji (w tym przedmiotów wspólnych) w ramach których występuje
+    Tester do wszystkich przedmiotów z 6 semestru aplikacji (w tym przedmiotów wspólnych) i niektórych przedmiotów systemów, w ramach których występuje
     forma weryfikacji przyswojonej przez studenta wiedzy w formie kolokwiów bądź też innych gówien. ( no prawie wszystkich,
     1. jebać bazy wiedzy, 2. nie do wszystkiego są pytania w paczce :/ )
     <br/><br/>
